Added screenshots to github page

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 
 <p>At present these pipelines depend on interfaces for <a href="http://geuz.org/gmsh/">Gmsh</a> and <a href="https://code.google.com/p/meshfix/">Meshfix</a> that can only be found in the enh/conductivity branch of my fork of <a href="https://github.com/swederik/nipype">Nipype</a>. </p>
 
+<h1><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h1>
+
+<p><strong>Whole head surface meshes</strong></p>
+<img src="images/screenshots/brain.png" width=100% alt="Whole head surface meshes" class="inline"/>
+
+<p><strong>White matter conductivity mapping</strong></p>
+<img src="images/screenshots/white.png" width=100% alt="White matter conductivity mapping" class="inline"/>
+
+<p><strong>Resulting electric field map</strong></p>
+<img src="images/screenshots/sideview.png" width=100% alt="Resulting electric field map" class="inline"/>
+
 <h1>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install</h1>
 
@@ -80,6 +91,7 @@ The Visual Computer, 2010. (c) Springer.</p>
 <p><strong>Nipype: Neuroimaging in Python - Pipelines and Interfaces</strong></p>
 
 <p>Gorgolewski K, Burns CD, Madison C, Clark D, Halchenko YO, Waskom ML, Ghosh SS. (2011). Nipype: a flexible, lightweight and extensible neuroimaging data processing framework in Python. Front. Neuroimform. 5:13.</p>
+
       </section>
     </div>
 
