Updated github webpage with new links following repo transfer

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/swederik/forward">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/CyclotronResearchCentre/forward">View on GitHub</a>
 
           <h1 id="project_title">Forward</h1>
           <h2 id="project_tagline">Realistic forward modeling from structural MRI and diffusion-weighted imaging</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/swederik/forward/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/swederik/forward/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/CyclotronResearchCentre/forward/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/CyclotronResearchCentre/forward/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -38,7 +38,7 @@
 
 <p>It builds off of the seminal <a href="http://simnibs.org/">SimNIBS</a> tool the field modelling of transcranial magnetic stimulation (TMS) and transcranial direct current stimulation. Human skin, skull, cerebrospinal fluid, and brain meshing pipelines have been rewritten with Nipype to ease access parallel processing and to allow users to start/stop the workflows. Conductivity tensor mapping from diffusion-weighted imaging is also included.</p>
 
-<p>At present these pipelines depend on interfaces for <a href="http://geuz.org/gmsh/">Gmsh</a> and <a href="https://code.google.com/p/meshfix/">Meshfix</a> that can only be found in the enh/conductivity branch of my fork of <a href="https://github.com/swederik/nipype">Nipype</a>. </p>
+<p>At present these pipelines depend on interfaces for <a href="http://geuz.org/gmsh/">Gmsh</a> and <a href="https://code.google.com/p/meshfix/">Meshfix</a> that can only currently be found in the enh/conductivity branch of the fork at <a href="https://github.com/swederik/nipype">Nipype</a>. </p>
 
 <h1><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h1>
 
@@ -98,7 +98,7 @@ The Visual Computer, 2010. (c) Springer.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Forward maintained by <a href="https://github.com/swederik">swederik</a></p>
+        <p class="copyright">Forward is developed at the <a href="https://github.com/CyclotronResearchCentre">Cyclotron Research Centre</a> by Erik Ziegler</p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
