Update web page with link to paper.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
 <p>At present these pipelines depend on interfaces for <a href="http://geuz.org/gmsh/">Gmsh</a> and <a href="https://code.google.com/p/meshfix/">Meshfix</a> that can only currently be found in the enh/conductivity branch of the fork at <a href="https://github.com/swederik/nipype">Nipype</a>. </p>
 
+<p>A <a href="http://www.sciencedirect.com/science/article/pii/S1053811914007307">paper</a> describing the tool has been accepted for publication in NeuroImage:
+E. Ziegler, S.L. Chellappa, G. Gaggioni, J.Q.M. Ly, G. Vandewalle, E. André, C. Geuzaine, C. Phillips, A finite-element reciprocity solution for EEG forward modeling with realistic individual head models. NeuroImage, in press, 2014. </a>
+ </p>
+
 <h1><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h1>
 
 <p><strong>Spherical tests vs. Analytical solution and OpenMEEG</strong></p>
