--- a/index.html
+++ b/index.html
@@ -40,25 +40,28 @@
 
 <p>At present these pipelines depend on interfaces for <a href="http://geuz.org/gmsh/">Gmsh</a> and <a href="https://code.google.com/p/meshfix/">Meshfix</a> that can only currently be found in the enh/conductivity branch of the fork at <a href="https://github.com/swederik/nipype">Nipype</a>. </p>
 
+<h2><a name="citation" class="anchor" href="#citation"><span class="octicon octicon-link"></span></a>Citation</h2>
+
+<p>A <a href="http://hdl.handle.net/2268/171896">paper</a> describing the tool has been accepted for publication in <a href="http://www.sciencedirect.com/science/article/pii/S1053811914007307">NeuroImage</a>: <br>
+E. Ziegler, S.L. Chellappa, G. Gaggioni, J.Q.M. Ly, G. Vandewalle, E. André, C. Geuzaine, C. Phillips, A finite-element reciprocity solution for EEG forward modeling with realistic individual head models. NeuroImage, in press, 2014. </a>
+ </p>
+
 <h1><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h1>
 
 <p><strong>Spherical tests vs. Analytical solution and OpenMEEG</strong></p>
 <img src="images/screenshots/WholeSphereAll4Views.png" width=100% alt="Sphere mesh" class="inline"/>
 
-<p><strong>Example voltage sink at one electrode</strong></p>
-<img src="images/screenshots/sink.png" width=100% alt="Voltage sink" class="inline"/>
-
-<p><strong>Accuracy comparable with OpenMEEG</strong></p>
+<p><strong>Accuracy comparable with OpenMEEG and SimBio</strong></p>
 <img src="images/screenshots/RDM_MAGs.png" width=100% alt="RDM and MAG" class="inline"/>
 
-<p><strong>Whole head surface meshes</strong></p>
-<img src="images/screenshots/HeadMeshes.png" width=100% alt="Whole head surface meshes" class="inline"/>
+<p><strong>Whole head meshing</strong></p>
+<img src="images/screenshots/HeadMeshes.png" width=100% alt="Whole head meshing" class="inline"/>
+
+<p><strong>Whole head electrostatic simulation </strong></p>
+<img src="images/screenshots/WholeHeadSingleSlice.png" width=100% alt="Head mesh simulation" class="inline"/>
 
 <p><strong>White matter conductivity mapping</strong></p>
 <img src="images/screenshots/white.png" width=100% alt="White matter conductivity mapping" class="inline"/>
-
-<p><strong>Resulting electric field map</strong></p>
-<img src="images/screenshots/sideview.png" width=100% alt="Resulting electric field map" class="inline"/>
 
 <h1>
 <a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install</h1>
@@ -107,7 +110,7 @@ The Visual Computer, 2010. (c) Springer.</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Forward is developed at the <a href="https://github.com/CyclotronResearchCentre">Cyclotron Research Centre</a> by Erik Ziegler</p>
+        <p class="copyright">Forward is developed at the <a href="https://github.com/CyclotronResearchCentre">Cyclotron Research Centre</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
