--- a/index.html
+++ b/index.html
@@ -43,15 +43,19 @@
 <h2><a name="citation" class="anchor" href="#citation"><span class="octicon octicon-link"></span></a>Citation</h2>
 
 <p>A <a href="http://hdl.handle.net/2268/171896">paper</a> describing the tool has been accepted for publication in <a href="http://www.sciencedirect.com/science/article/pii/S1053811914007307">NeuroImage</a>: <br>
-E. Ziegler, S.L. Chellappa, G. Gaggioni, J.Q.M. Ly, G. Vandewalle, E. André, C. Geuzaine, C. Phillips, A finite-element reciprocity solution for EEG forward modeling with realistic individual head models. NeuroImage, in press, 2014. </a>
+
+"A finite-element reciprocity solution for EEG forward modeling with realistic individual head models."
+E. Ziegler, S.L. Chellappa, G. Gaggioni, J.Q.M. Ly, G. Vandewalle, E. André, C. Geuzaine, C. Phillips, NeuroImage. Volume 103, December 2014, Pages 542-551, ISSN 1053-8119, <a href="http://dx.doi.org/10.1016/j.neuroimage.2014.08.056">http://dx.doi.org/10.1016/j.neuroimage.2014.08.056.</a>
+
+</a>
  </p>
 
 <h1><a name="screenshots" class="anchor" href="#screenshots"><span class="octicon octicon-link"></span></a>Screenshots</h1>
 
-<p><strong>Spherical tests vs. Analytical solution and OpenMEEG</strong></p>
+<p><strong>Spherical electrostatic simulation</strong></p>
 <img src="images/screenshots/WholeSphereAll4Views.png" width=100% alt="Sphere mesh" class="inline"/>
 
-<p><strong>Accuracy comparable with OpenMEEG and SimBio</strong></p>
+<p><strong>Leadfield accuracy comparable with OpenMEEG and SimBio</strong></p>
 <img src="images/screenshots/RDM_MAGs.png" width=100% alt="RDM and MAG" class="inline"/>
 
 <p><strong>Whole head meshing</strong></p>
@@ -111,7 +115,6 @@ The Visual Computer, 2010. (c) Springer.</p>
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Forward is developed at the <a href="https://github.com/CyclotronResearchCentre">Cyclotron Research Centre</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
